# license-header

./: .env.example  CHANGELOG.md  LICENSE_HEADER  README.md  license-header.config.json  pyproject.toml
.github/repo-analysis-output/: dependencies.json  dependencies.md  file-summaries.json  file-summaries.md  tree.json  tree.md
.github/workflows/: af_maintenance.yml
license_header/: __init__.py  apply.py  check.py  cli.py  config.py  languages.py  reports.py  scanner.py  utils.py
repo-analysis-output/: dependencies.json  dependencies.md  file-summaries.json  file-summaries.md  tree.json  tree.md
tests/: test_apply.py  test_check.py  test_cli.py  test_config.py  test_languages.py  test_reports.py  test_scanner.py
