[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "license-header"
version = "0.2.0"
description = "Deterministic license header enforcement for source files"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "Agent Foundry and John Brosnihan"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.1.7,<9.0.0",
]

[project.scripts]
license-header = "license_header.cli:main"

[project.optional-dependencies]
dev = [
    # Pinned to stable minor versions for reproducibility (2025-11)
    # pytest 8.3.x provides stable async support and improved assertion introspection
    "pytest>=8.3.0,<9.0.0",
    # pytest-cov 6.x aligns with coverage.py 7.x for accurate coverage reporting
    "pytest-cov>=6.0.0,<7.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["license_header*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# Show extra test summary info and print stdout/stderr on failures
addopts = "-v --tb=short"
# Markers for categorizing tests
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
